# hmh2021

./: CMakeLists.txt
scripts/: build.py
src/: CMakeLists.txt  win32_handmade.cpp
